--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<li><a href="research.html">Research</a></li>
 	<li><a href="materials.html">Materials</a></li>
 	<li><a href="personal.html">Personal</a></li>
-	<li><a href="friends.html">Comrades</a></li>
+	<li><a href="comrades.html">Comrades</a></li>
 	<li><a href="interest.html">Of Interest</a></li>
 </ul>
 </nav>
