--- a/interest.html
+++ b/interest.html
@@ -5,7 +5,18 @@
 </head>
 <body>
 	<h1>Of Interest</h1>
-<a href="index.html">Home</a>
+<!-- Navigation Bar -->
+<nav class="w3-card">
+<ul class="mynavi">
+	<li><a href="index.html">Home</a></li>
+	<li><a href="publications.html">Publications</a></li>
+	<li><a href="research.html">Research</a></li>
+	<li><a href="materials.html">Materials</a></li>
+	<li><a href="personal.html">Personal</a></li>
+	<li><a href="friends.html">Comrades</a></li>
+	<li><a href="interest.html">Of Interest</a></li>
+</ul>
+</nav>
 </body>
 
 
