--- a/personal.html
+++ b/personal.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href = "nav-style.css" type = "text/css" rel = "stylesheet">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<title>Personal</title>
 </head>
 <body>
@@ -13,7 +16,7 @@
 	<li><a href="research.html">Research</a></li>
 	<li><a href="materials.html">Materials</a></li>
 	<li><a href="personal.html">Personal</a></li>
-	<li><a href="friends.html">Comrades</a></li>
+	<li><a href="comrades.html">Comrades</a></li>
 	<li><a href="interest.html">Of Interest</a></li>
 </ul>
 </nav>
