--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
 <!-- Heading -->
 <div class="w3-container" style="font-family:Sans-serif;">
-	<p style="font-size:125%">Efr&#233;n Cruz Cort&#233s.</p>
+	<p style="font-size:125%">Efr&#233;n Cruz Cort&#233;s.</p>
 	<div class="w3-panel w3-pink w3-round-xlarge">
 	<p class="w3-text-yellow" style="font-size:135%"><b>Under Construction.</b></p>
 	</div>
 </div>
 
 <!-- Navigation Bar -->
-<nav class="w3-card">
+<nav class="w3-container" style="margin:auto; width: 60%;padding:0px;">
 <ul class="mynavi">
 	<li><a href="index.html">Home</a></li>
 	<li><a href="publications.html">Publications</a></li>
@@ -47,29 +47,31 @@
 -->
 
 <!-- Personal Info -->
-<div class="w3-card" style="width:100%">
-    <div class="w3-container w3-padding-small">
-	<img src="images/greenings-redux.jpg" alt="Efrén's Picture" style="width:25%;height:25%;" 
-	class="w3-left w3-round w3-margin">
-    	<div>
-	<h2 class="w3-center"> In a nutshell</h2>
-	<h4>For the casual visitor:</h4>
-	<p>My research is on <b>machine learning</b>. Broadly speaking, I look at data large in quantity and complex in quality, and procure, through an inferential paradigm, properties of interest. These properties can be of the data itself or of the system responsible for generating such data. For example, after observing a series of events, we would like to predict the most probable future event. Alternatively, we may observe instances of several categories and characterize them so as to correctly categorize new observations. I work in theoretical, methodological, and applied aspects of machine learning. Theory guarantees our machines will learn well a family of concepts after enough experience, and at an appropriate speed. Through methodology we can design efficient and fast algorithm for the construction and usage of such machines. Applications pose relevant and challenging problems that in turn incite new theory.</p>
-	<h4>For the vintage visitor:</h4>
-	<p>I work on nonparametric and nonlinear methods in machine learning. Addressing the challenges of "big data", I developed a way to quickly compute a sparse approximation of a general kernel mean, scalable in both sample size and dimension. I have also proposed a kernel density estimator which, under certain modifications, is statistically consistent even with fixed smoothing parameter. I am currently working on expanding the latter result to dependent data and to non-euclidean domains. [Human balance stability]. [Archaeological networks].</p>
-	</div>
-    </div>
+<div class="w3-container w3-red" style="width:60%; margin:auto; padding-right:0px;">
+	<img src="images/greenings-redux.jpg" alt="Efrén's Picture" style="width:30%;height:30%;" 
+	class="w3-right w3-round">
+    <h1>Efrén Cruz Cortés</h1>
+    <p>Eberly Postdoctoral Fellow</p>
 </div>
+    
+<!-- Quick Description -->
+    <div class="w3-container" style="width:60%; margin:auto">
+        <h2 class="w3-center"> In a nutshell</h2>
+        <div>
+            <h4>For the casual visitor:</h4>
+            <p>My research is on <b>machine learning</b>. Broadly speaking, I look at data large in quantity and complex in quality, and procure, through an inferential paradigm, properties of interest. These properties can be of the data itself or of the system responsible for generating such data. For example, after observing a series of events, we would like to predict the most probable future event. Alternatively, we may observe instances of several categories and characterize them so as to correctly categorize new observations. I work in theoretical, methodological, and applied aspects of machine learning. Theory guarantees our machines will learn well a family of concepts after enough experience, and at an appropriate speed. Through methodology we can design efficient and fast algorithm for the construction and usage of such machines. Applications pose relevant and challenging problems that in turn incite new theory.</p>
+            <!-- the following should be set as "research statement, more formal, in another section
+            <h4>For the vintage visitor:</h4>
+            <p>I work on nonparametric and nonlinear methods in machine learning. Addressing the challenges of "big data", I developed a way to quickly compute a sparse approximation of a general kernel mean, scalable in both sample size and dimension. I have also proposed a kernel density estimator which, under certain modifications, is statistically consistent even with fixed smoothing parameter. I am currently working on expanding the latter result to dependent data and to non-euclidean domains. [Human balance stability]. [Archaeological networks].</p>
+            -->
+        </div>
+    </div>
 
 <!-- Research Statement -->
-<div class="w3-container">
-	<h2>Research Statement</h2>
-	<p>My research is...</p>
-</div>
 
 <!-- Other Efrenes -->
-<div class="w3-container">
-<p>
+<div class="w3-container w3-pale-red">
+<p >
 AKA: Efren Cruz Cortes.
 	<a href = "https://github.com/efrencc" target="_blank">
 		<img src="images/GitHub-Mark-32px.png" alt="Github Profile" style="width:32px;height:32px;border:0;">
