--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div class="w3-container w3-red" style="width:60%; margin:auto; padding-right:0px;">
 	<img src="images/greenings-redux.jpg" alt="Efrén's Picture" style="width:30%;height:30%;" 
 	class="w3-right w3-round">
-    <h1>Efrén Cruz Cortés</h1>
+    <h1>Efr&#233;n Cruz Cort&#233;s</h1>
     <p>Eberly Postdoctoral Fellow</p>
 </div>
     
