--- a/comrades.html
+++ b/comrades.html
@@ -37,7 +37,7 @@
   <li>
     <div class="w3-container w3-padding-small">
     <img src="images/paty-2.jpg" class="w3-left w3-round-xlarge w3-margin-right" style="width:20%">
-    <span class="w3-large"><a href="http://pattysolorzanodance.weebly.com/" target="_blank">Paty Sol&oacute;rzano</a></span><br>
+    <span class="w3-large"><a href="https://www.girasoladances.com/" target="_blank">Paty Sol&oacute;rzano</a></span><br>
     <span>Performance Artist, Comrade </span>
     </div>
   </li>
