--- a/index.html
+++ b/index.html
@@ -48,10 +48,20 @@
 
 <!-- Personal Info -->
 <div class="w3-container w3-red" style="width:60%; margin:auto; padding-right:0px;">
+    <div class = "w3-container w3-twothird">
+        <h1>Efr&#233;n Cruz Cort&#233;s</h1>
+        <p>Eberly Postdoctoral Fellow</p>
+        <p>Department of Statistics</p>
+        <p>Pennsylvania State University</p>
+    </div>
+    <div>
+        <img src="images/greenings-redux.jpg" alt="Efrén's Picture" style="width:30%;height:30%;" 
+	class="w3-right">
+    </div>
+    <!--
 	<img src="images/greenings-redux.jpg" alt="Efrén's Picture" style="width:30%;height:30%;" 
-	class="w3-right w3-round">
-    <h1>Efr&#233;n Cruz Cort&#233;s</h1>
-    <p>Eberly Postdoctoral Fellow</p>
+	class="w3-right">
+    -->
 </div>
     
 <!-- Quick Description -->
