--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
     <p><li>
         D. Ghosh, E. Cruz Cort&eacute;s, K. Josey and F. Yang,
         <b>An Empirical Process Framework for Covariate Balance in Causal Inference</b>, 2020
-        (in progress).
+        (submitted).
         </li>
     
     <p><li>E. Cruz Cort&eacute;s and D. Ghosh, <b>An Invitation to System-wide Algorithmic Fairness</b>, <i>Artificial Intelligence, Ethics and Society</i>, 2020 (<a href = "https://dl.acm.org/doi/abs/10.1145/3375627.3375860" target="_blank">ACM</a>, <a href = "https://arxiv.org/abs/1903.09209" target="_blank">arxiv</a>).</li>
