--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <link href = "style.css" type = "text/css" rel = "stylesheet">
 <link href = "nav-style.css" type = "text/css" rel = "stylesheet">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<title>Efr&#233;n Cruz Cort&#233s</title>
+<link rel="icon" href="images/icon.PNG">
+<title>Efr&#233;n Cruz Cort&#233;s</title>
 </head>
 
 <!-- [[ ** BODY ** ]] -->
@@ -26,11 +27,11 @@
 <ul class="mynavi">
 	<li><a href="index.html">Home</a></li>
 	<li><a href="publications.html">Publications</a></li>
-	<li><a href="research.html">Research</a></li>
-	<li><a href="materials.html">Materials</a></li>
-	<li><a href="personal.html">Personal</a></li>
+	<!-- <li><a href="research.html">Research</a></li> -->
+	<!-- <li><a href="materials.html">Materials</a></li> -->
+	<li><a href="personal.html">Art</a></li>
 	<li><a href="comrades.html">Comrades</a></li>
-	<li><a href="interest.html">Of Interest</a></li>
+	<!-- <li><a href="interest.html">Of Interest</a></li> -->
 </ul>
 </nav>
 
@@ -49,10 +50,12 @@
 <!-- Personal Info -->
 <div class="w3-container w3-red" style="width:60%; margin:auto; padding-right:0px;">
     <div class = "w3-container w3-twothird">
-        <h1>Efr&#233;n Cruz Cort&#233;s</h1>
-        <p>Eberly Postdoctoral Fellow</p>
-        <p>Department of Statistics</p>
-        <p>Pennsylvania State University</p>
+        <h1><b>Efr&#233;n Cruz Cort&#233;s</b></h1>
+        <h3><b>Eberly Postdoctoral Fellow</b></h3>
+        <BLOCKQUOTE>
+            Department of Statistics<br>
+            Pennsylvania State University
+        </BLOCKQUOTE>
     </div>
     <div>
         <img src="images/greenings-redux.jpg" alt="Efrén's Picture" style="width:30%;height:30%;" 
