--- a/publications.html
+++ b/publications.html
@@ -13,11 +13,11 @@
 <ul class="mynavi">
 	<li><a href="index.html">Home</a></li>
 	<li><a href="publications.html">Publications</a></li>
-	<li><a href="research.html">Research</a></li>
-	<li><a href="materials.html">Materials</a></li>
-	<li><a href="personal.html">Personal</a></li>
+	<!-- <li><a href="research.html">Research</a></li> -->
+	<!-- <li><a href="materials.html">Materials</a></li> -->
+	<li><a href="personal.html">Art</a></li>
 	<li><a href="comrades.html">Comrades</a></li>
-	<li><a href="interest.html">Of Interest</a></li>
+	<!-- <li><a href="interest.html">Of Interest</a></li> -->
 </ul>
 </nav>
 
