--- a/comrades.html
+++ b/comrades.html
@@ -4,60 +4,64 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link href = "style.css" type = "text/css" rel = "stylesheet">
 <link href = "nav-style.css" type = "text/css" rel = "stylesheet">
 	<title>Comrades</title>
 </head>
 <body>
 	<h1>Comrades</h1>
+
+<div class="w3-container overdiv">
+
+    <!-- Navigation Bar -->
+    <nav class="w3-card">
+    <ul class="mynavi">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="publications.html">Publications</a></li>
+        <!-- <li><a href="research.html">Research</a></li> -->
+        <!-- <li><a href="materials.html">Materials</a></li> -->
+        <li><a href="personal.html">Art</a></li>
+        <li><a href="comrades.html">Comrades</a></li>
+        <!-- <li><a href="interest.html">Of Interest</a></li> -->
+    </ul>
+    </nav>
+
+    <!-- List of Friends -->
+    <ul class="w3-ul w3-card-4">
+      <li>
+        <div class = "w3-container w3-padding-small">
+            <img src="images/Ghosh.jpg" class = "w3-left w3-round-xlarge w3-margin-right" style="width:20%">
+            <span class="w3-large"><a href="https://scholar.google.com/citations?user=L14IppEAAAAJ&hl=en" target="_blank">Debashis Ghosh</a></span>
+            <br>
+            <!-- <span>Postdoc Mentor</span> -->
+        </div>
+      </li>
+
+      <li>
+        <div class="w3-container w3-padding-small">
+        <img src="images/paty-2.jpg" class="w3-left w3-round-xlarge w3-margin-right" style="width:20%">
+        <span class="w3-large"><a href="https://www.girasoladances.com/" target="_blank">Paty Sol&oacute;rzano</a></span><br>
+        <!-- <span>Performance Artist, Comrade </span> -->
+        </div>
+      </li>
+
+      <li>
+        <div class="w3-container w3-padding-small">
+        <img src="images/scott.jpg" class="w3-left w3-round-xlarge w3-margin-right" style="width:20%">
+        <span class="w3-large"><a href="http://web.eecs.umich.edu/~cscott/" target="_blank">Clay Scott</a></span><br>
+        <!-- <span>PhD Adviser</span> -->
+        </div>
+      </li>
+
+      <li>
+        <div class="w3-container w3-padding-small">
+        <img src="images/brian.jpg" class="w3-left w3-round-xlarge w3-margin-right" style="width:20%">
+        <span class="w3-large"><a href="https://bdsegal.github.io" target="_blank">Brian Segal</a></span><br>
+        <!-- <span>Biostatistician, Comrade</span> -->
+        </div>
+      </li>
+    </ul>
+
+</div>
 </body>
-
-<!-- Navigation Bar -->
-<nav class="w3-card">
-<ul class="mynavi">
-	<li><a href="index.html">Home</a></li>
-	<li><a href="publications.html">Publications</a></li>
-	<!-- <li><a href="research.html">Research</a></li> -->
-	<!-- <li><a href="materials.html">Materials</a></li> -->
-	<li><a href="personal.html">Art</a></li>
-	<li><a href="comrades.html">Comrades</a></li>
-	<!-- <li><a href="interest.html">Of Interest</a></li> -->
-</ul>
-</nav>
-
-<!-- List of Friends -->
-<ul class="w3-ul w3-card-4">
-  <li>
-    <div class = "w3-container w3-padding-small">
-        <img src="images/Ghosh.jpg" class = "w3-left w3-round-xlarge w3-margin-right" style="width:20%">
-        <span class="w3-large"><a href="https://scholar.google.com/citations?user=L14IppEAAAAJ&hl=en" target="_blank">Debashis Ghosh</a></span>
-        <br>
-        <!-- <span>Postdoc Mentor</span> -->
-    </div>
-  </li>
-    
-  <li>
-    <div class="w3-container w3-padding-small">
-    <img src="images/paty-2.jpg" class="w3-left w3-round-xlarge w3-margin-right" style="width:20%">
-    <span class="w3-large"><a href="https://www.girasoladances.com/" target="_blank">Paty Sol&oacute;rzano</a></span><br>
-    <!-- <span>Performance Artist, Comrade </span> -->
-    </div>
-  </li>
-    
-  <li>
-    <div class="w3-container w3-padding-small">
-    <img src="images/scott.jpg" class="w3-left w3-round-xlarge w3-margin-right" style="width:20%">
-    <span class="w3-large"><a href="http://web.eecs.umich.edu/~cscott/" target="_blank">Clay Scott</a></span><br>
-    <!-- <span>PhD Adviser</span> -->
-    </div>
-  </li>
-
-  <li>
-    <div class="w3-container w3-padding-small">
-    <img src="images/brian.jpg" class="w3-left w3-round-xlarge w3-margin-right" style="width:20%">
-    <span class="w3-large"><a href="https://bdsegal.github.io" target="_blank">Brian Segal</a></span><br>
-    <!-- <span>Biostatistician, Comrade</span> -->
-    </div>
-  </li>
-</ul>
-
 </html>
