--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 	</div>
 </div>
 
+<div class = "w3-container overdiv">
+
 <!-- Navigation Bar -->
-<nav class="w3-container" style="margin:auto; width: 60%;padding:0px;">
+<nav class="w3-container" style="padding:0"> <!-- you can either make it a container with 0 padding, or a w3-card (see other pages), the card adds shadows -->
 <ul class="mynavi">
 	<li><a href="index.html">Home</a></li>
 	<li><a href="publications.html">Publications</a></li>
@@ -48,7 +50,7 @@
 -->
 
 <!-- Personal Info -->
-<div class="w3-container w3-red" style="width:60%; margin:auto; padding-right:0px;">
+<div class="w3-container w3-red">
     <div class = "w3-container w3-twothird">
         <h1><b>Efr&#233;n Cruz Cort&#233;s</b></h1>
         <h3><b>Eberly Postdoctoral Fellow</b></h3>
@@ -68,15 +70,12 @@
 </div>
     
 <!-- Quick Description -->
-    <div class="w3-container" style="width:60%; margin:auto">
+    <div class="w3-container">
         <h2 class="w3-center"> In a nutshell</h2>
         <div>
-            <h4>For the casual visitor:</h4>
-            <p>My research is on <b>machine learning</b>. Broadly speaking, I look at data large in quantity and complex in quality, and procure, through an inferential paradigm, properties of interest. These properties can be of the data itself or of the system responsible for generating such data. For example, after observing a series of events, we would like to predict the most probable future event. Alternatively, we may observe instances of several categories and characterize them so as to correctly categorize new observations. I work in theoretical, methodological, and applied aspects of machine learning. Theory guarantees our machines will learn well a family of concepts after enough experience, and at an appropriate speed. Through methodology we can design efficient and fast algorithm for the construction and usage of such machines. Applications pose relevant and challenging problems that in turn incite new theory.</p>
-            <!-- the following should be set as "research statement, more formal, in another section
-            <h4>For the vintage visitor:</h4>
-            <p>I work on nonparametric and nonlinear methods in machine learning. Addressing the challenges of "big data", I developed a way to quickly compute a sparse approximation of a general kernel mean, scalable in both sample size and dimension. I have also proposed a kernel density estimator which, under certain modifications, is statistically consistent even with fixed smoothing parameter. I am currently working on expanding the latter result to dependent data and to non-euclidean domains. [Human balance stability]. [Archaeological networks].</p>
-            -->
+            <!-- <h4>For the casual visitor:</h4> -->
+            <p>I study the way algorithms reproduce bias and discrimination. Automated procedures are often designed to mimic the historical data humans have generated. Therefore, unintendedly, they have learned to discriminate based on class, race, gender, and other vulnerable groups. Such a phenomenon has serious consequences, as it may lead to furthering economic inequality, depriving the poor of resources, over-incarceration of people of color, etc. My goal is to understand the dynamics of the system the algorithm belongs to and assess which structural interventions are the best actions to both avoid discrimination and accomplish the desired goal for the population of interest.
+            </p>
         </div>
     </div>
 
@@ -95,6 +94,7 @@ AKA: Efren Cruz Cortes.
 </p>
 </div>
 
+</div>
 </body>
 
 </html>
