--- a/publications.html
+++ b/publications.html
@@ -27,12 +27,17 @@
 
     <ul>
         <p><li>
+            E. Cruz Cort&eacute;s, F. Yang, E. Juárez-Colunga, T. Warsavage, D. Ghosh,
+            <b>Comment on "Statistical Modeling: the Two Cultures" by Leo Breiman</b>, 2021 (submitted).
+           </li>
+        </p>
+        <p><li>
             D. Ghosh, E. Cruz Cort&eacute;s, K. Josey and F. Yang,
             <b>An Empirical Process Framework for Covariate Balance in Causal Inference</b>, 2020
             (submitted).
             </li>
 
-        <p><li>E. Cruz Cort&eacute;s and D. Ghosh, <b>An Invitation to System-wide Algorithmic Fairness</b>, <i>Artificial Intelligence, Ethics and Society</i>, 2020 (<a href = "https://dl.acm.org/doi/abs/10.1145/3375627.3375860" target="_blank">ACM</a>, <a href = "https://arxiv.org/abs/1903.09209" target="_blank">arxiv</a>).</li>
+        <p><li>E. Cruz Cort&eacute;s and D. Ghosh, <b>An Invitation to System-wide Algorithmic Fairness</b>, <i>Artificial Intelligence, Ethics and Society</i>, 2020 (<a href= "files/swf_AIES2020_FINAL.pdf">PDF</a>, <a href = "https://dl.acm.org/doi/abs/10.1145/3375627.3375860" target="_blank">ACM</a>).</li>
 
         <p><li>
             P. Rudra, E. Cruz Cort&eacute;s, X. Zhang, D. Ghosh, 
