--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </BLOCKQUOTE>
     </div>
     <div>
-        <img src="images/greenings-redux.jpg" alt="Efrén's Picture" style="width:30%;height:30%;" 
+        <img src="images/efren-jacaranda.JPG" alt="Efrén's Picture" style="width:30%;height:30%;" 
 	class="w3-right">
     </div>
     <!--
