--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 <div class="w3-container w3-red">
     <div class = "w3-container w3-twothird">
         <h1><b>Efr&#233;n Cruz Cort&#233;s</b></h1>
-        <h3><b>Eberly Postdoctoral Fellow</b></h3>
+        <h3><b>Michigan Data Science Fellow</b></h3>
         <BLOCKQUOTE>
-            Department of Statistics<br>
-            Pennsylvania State University
+            Michigan Institute for Data Science<br>
+            University of Michigan
         </BLOCKQUOTE>
     </div>
     <div>
