--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         <h1><b>Efr&#233;n Cruz Cort&#233;s</b></h1>
         <h3><b>Michigan Data Science Fellow</b></h3>
         <BLOCKQUOTE>
-            Michigan Institute for Data Science<br>
+            Michigan Institute for Data Science || Center for the Study of Complex Systems<br>
             University of Michigan
         </BLOCKQUOTE>
     </div>
     <div>
-        <img src="images/efren-jacaranda.JPG" alt="Efrén's Picture" style="width:30%;height:30%;" 
+        <img src="images/efren-jacaranda.JPG" alt="EfrÃ©n's Picture" style="width:30%;height:30%;" 
 	class="w3-right">
     </div>
     <!--
-	<img src="images/greenings-redux.jpg" alt="Efrén's Picture" style="width:30%;height:30%;" 
+	<img src="images/greenings-redux.jpg" alt="EfrÃ©n's Picture" style="width:30%;height:30%;" 
 	class="w3-right">
     -->
 </div>
@@ -92,7 +92,7 @@ AKA: Efren Cruz Cortes.
 		<img src="images/GitHub-Mark-32px.png" alt="Github Profile" style="width:32px;height:32px;border:0;">
 	</a>
 	<a href = "https://cafedemostenes.wordpress.com/" target="_blank">
-		<img src="images/wordpress-logo-32-blue.png" alt="Efrén's Blog" style="width:32px;height:32px;border:0;">
+		<img src="images/wordpress-logo-32-blue.png" alt="EfrÃ©n's Blog" style="width:32px;height:32px;border:0;">
 	</a>
 </p>
 </div>
