--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,11 @@
     </nav>
 
     <ul>
+	<p><li>
+	    E. Cruz Cor&eacute;s, S. Rajmajer, D. Ghosh,
+		<b>Structural Interventions on Automated Decision Makig Systes</b>. <Workshop on Algorithmic Fairness Through the Lens of Causality and Robustness>, NeurIPS 2021 (<a href = "https://github.com/efrencc/efrencc.github.io/blob/master/files/structural_interventions_afcr_neurips_2021.pdf">PDF</a>).
+	   </li>
+	</p>
         <p><li>
             E. Cruz Cort&eacute;s, F. Yang, E. Juárez-Colunga, T. Warsavage, D. Ghosh,
             <b>Comment on "Statistical Modeling: the Two Cultures" by Leo Breiman</b>, 2021 (submitted).
