--- a/publications.html
+++ b/publications.html
@@ -28,7 +28,7 @@
     <ul>
 	<p><li>
 	    E. Cruz Cor&eacute;s, S. Rajmajer, D. Ghosh,
-		<b>Structural Interventions on Automated Decision Makig Systems</b>. <i>Workshop on Algorithmic Fairness Through the Lens of Causality and Robustness</i>, NeurIPS 2021 (<a href = "https://github.com/efrencc/efrencc.github.io/blob/master/files/structural_interventions_afcr_neurips_2021.pdf">PDF</a>).
+		<b>Structural Interventions on Automated Decision Making Systems</b>. <i>Workshop on Algorithmic Fairness Through the Lens of Causality and Robustness</i>, NeurIPS 2021 (<a href = "https://github.com/efrencc/efrencc.github.io/blob/master/files/structural_interventions_afcr_neurips_2021.pdf">PDF</a>).
 	   </li>
 	</p>
         <p><li>
