--- a/personal.html
+++ b/personal.html
@@ -27,6 +27,15 @@
     <!-- Info -->
     <p>I often collaborate with artists and dancers. Currently I'm a member of the <b>Coven Intelligecen Program</b>  and am working on the <b>I.C.T.</b> project. Here are some exhibitions, workshops, and performances:</p>
     <ul class = "w3-ul w3-card">
+	    <li>
+		<div class = "w3-container">
+			<span><b>STAKES Chronicles I-III (Insurgent Ecologies Archive, SpellWeaver, Plants teach ethics to AI)</b></span>
+			<br>
+			Coven Intelligencet Program <br>
+			#BURN__<br>
+			Pixelache Festival, Helsinki, Finland, 2021
+			<!-- link here: https://festival.pixelache.ac/events/stakes-chronicles-i-iii -->
+	    </li>
         <li>
             <div class = "w3-container">
                 <span><b>One two three potions a secret word/and soon you'll see a freer world</b></span>
