--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,8 @@
 	</p>
         <p><li>
             E. Cruz Cort&eacute;s, F. Yang, E. Juárez-Colunga, T. Warsavage, D. Ghosh,
-            <b>Comment on "Statistical Modeling: the Two Cultures" by Leo Breiman</b>, 2021 (submitted).
+            <b>Comment on "Statistical Modeling: the Two Cultures" by Leo Breiman</b>, Jounral of Observational Studies, Vol. 7, Iss. 1, 2021,
+		(<a href = "https://muse.jhu.edu/article/799746">MUSE</a>).
            </li>
         </p>
         <p><li>
