--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,9 @@
 	</p>
         <p><li>
             E. Cruz Cort&eacute;s, F. Yang, E. Juárez-Colunga, T. Warsavage, D. Ghosh,
-            <b>Comment on "Statistical Modeling: the Two Cultures" by Leo Breiman</b>, Jounral of Observational Studies, Vol. 7, Iss. 1, 2021,
+            <b>Comment on "Statistical Modeling: the Two Cultures" by Leo Breiman</b>,
+		<i> Special Issue: Commentaries on Breiman's Two Cultures</i>,
+		Journal of Observational Studies, Vol. 7, Iss. 1, 2021,
 		(<a href = "https://muse.jhu.edu/article/799746">MUSE</a>).
            </li>
         </p>
