--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 <div class="w3-container w3-pale-red">
 <p >
 AKA: Efren Cruz Cortes.
+	<a href = "https://twitter.com/cafedemostenes" target="_blank">
+		<img src = "images/twitter-icon.png" alt="Twitter Profile" style="width:32px;height:32px;border:0;">
+	</a>
 	<a href = "https://github.com/efrencc" target="_blank">
 		<img src="images/GitHub-Mark-32px.png" alt="Github Profile" style="width:32px;height:32px;border:0;">
 	</a>
