--- a/publications.html
+++ b/publications.html
@@ -26,9 +26,16 @@
     </nav>
 
     <ul>
+	    <p><li>
+		    E. Cruz Cort&eacute;s, S. Rajtmajer, D. Ghosh,
+		    <b>Locality of Technical objects and the Role of Structural Interventions for Systemic Change</b>. <i>FAccT</i>, 2022 (<a href = https://github.com/efrencc/efrencc.github.io/blob/master/files/cruzcortes%202022%20locality%20of%20technical%20objects%20-%20semifinal%20draft.pdf>PDF</a>).
+		</li>
+	    </p>
 	<p><li>
-	    E. Cruz Cort&eacute;s, S. Rajmajer, D. Ghosh,
+	    E. Cruz Cort&eacute;s, S. Rajtmajer, D. Ghosh,
 		<b>Structural Interventions on Automated Decision Making Systems</b>. <i>Workshop on Algorithmic Fairness Through the Lens of Causality and Robustness</i>, NeurIPS 2021 (<a href = "https://github.com/efrencc/efrencc.github.io/blob/master/files/structural_interventions_afcr_neurips_2021.pdf">PDF</a>).
+		<br>
+		(Note: The extended version of this paper is right above this item, under the new name <i>Locality of Technical Objects...</i>.)
 	   </li>
 	</p>
         <p><li>
