--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,11 @@
 
     <ul>
 	    <p><li>
+		    Barbe, Carón, Cruz Cortés, et al.,
+		    <b>Working Through Political Organization</b>. <i>Crisis and Critique</i>, 2022 (forthcoming).
+		</li>
+	    </p>
+	    <p><li>
 		    E. Cruz Cort&eacute;s, S. Rajtmajer, D. Ghosh,
 		    <b>Locality of Technical objects and the Role of Structural Interventions for Systemic Change</b>. <i>FAccT</i>, 2022 (<a href = https://github.com/efrencc/efrencc.github.io/blob/master/files/cruzcortes%202022%20locality%20of%20technical%20objects%20-%20semifinal%20draft.pdf>PDF</a>).
 		</li>
