--- a/publications.html
+++ b/publications.html
@@ -28,7 +28,7 @@
     <ul>
 	    <p><li>
 		    Barbe, Carón, Cruz Cortés, et al.,
-		    <b>Working Through Political Organization</b>. <i>Crisis and Critique</i>, 2022 (forthcoming).
+		    <b>Working Through Political Organization</b>. <i>Crisis and Critique</i>, vol 9, Issue 2, 2022 (<a href = https://www.crisiscritique.org/storage/app/media/nov-25/subset-of-theoretical-practice.pdf>PDF</a>).
 		</li>
 	    </p>
 	    <p><li>
@@ -52,9 +52,9 @@
            </li>
         </p>
         <p><li>
-            D. Ghosh, E. Cruz Cort&eacute;s, K. Josey and F. Yang,
+            E. Cruz Cort&eacute;s, K. Josey and F. Yang, D. Ghosh, 
             <b>An Empirical Process Framework for Covariate Balance in Causal Inference</b>, 2020
-            (submitted).
+		(<a href = https://arxiv.org/abs/2301.00889>arXiv</a>).
             </li>
 
         <p><li>E. Cruz Cort&eacute;s and D. Ghosh, <b>An Invitation to System-wide Algorithmic Fairness</b>, <i>Artificial Intelligence, Ethics and Society</i>, 2020 (<a href= "files/swf_AIES2020_FINAL.pdf">PDF</a>, <a href = "https://dl.acm.org/doi/abs/10.1145/3375627.3375860" target="_blank">ACM</a>).</li>
