--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@ AKA: Efren Cruz Cortes.
 	<a href = "https://cafedemostenes.wordpress.com/" target="_blank">
 		<img src="images/wordpress-logo-32-blue.png" alt="Efrén's Blog" style="width:32px;height:32px;border:0;">
 	</a>
+	<a>
+		<b>email</b>: encc (at) umich (dot) edu
+	</a>
 </p>
 </div>
 
