--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href = "style.css" type = "text/css" rel = "stylesheet">
 <link href = "nav-style.css" type = "text/css" rel = "stylesheet">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="icon" href="images/icon.PNG">
+<link rel="icon" href="images/efren-jacaranda.jpeg">
 <title>Efr&#233;n Cruz Cort&#233;s</title>
 </head>
 
