--- a/comrades.html
+++ b/comrades.html
@@ -58,6 +58,35 @@
     </nav>
 
     <!-- List of Friends -->
+	<div class="card-container">
+	    <div class="card">
+	      <img src="images/Ghosh.jpg" alt="Debashis Ghosh">
+	      <div class="w3-large"><a href="https://scholar.google.com/citations?user=L14IppEAAAAJ&hl=en" target="_blank">Debashis Ghosh</a></div>
+	      <!-- <div>Postdoc Mentor</div> -->
+	    </div>
+
+	    <div class="card">
+	      <img src="images/paty-2.jpg" alt="Paty Sol&oacute;rzano">
+	      <div class="w3-large"><a href="https://www.girasoladances.com/" target="_blank">Paty Sol&oacute;rzano</a></div>
+	      <!-- <div>Performance Artist, Comrade</div> -->
+	    </div>
+
+	    <div class="card">
+	      <img src="images/scott.jpg" alt="Clay Scott">
+	      <div class="w3-large"><a href="http://web.eecs.umich.edu/~cscott/" target="_blank">Clay Scott</a></div>
+	      <!-- <div>PhD Adviser</div> -->
+	    </div>
+
+	    <div class="card">
+	      <img src="images/brian.jpg" alt="Brian Segal">
+	      <div class="w3-large"><a href="https://bdsegal.github.io" target="_blank">Brian Segal</a></div>
+	      <!-- <div>Biostatistician, Comrade</div> -->
+	    </div>
+	</div>
+	
+	
+	
+<!--
     <ul class="w3-ul w3-card-4">
       <li>
         <div class = "w3-container w3-padding-small">
@@ -92,6 +121,7 @@
         </div>
       </li>
     </ul>
+-->
 
 </div>
 </body>
