--- a/comrades.html
+++ b/comrades.html
@@ -6,39 +6,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link href = "style.css" type = "text/css" rel = "stylesheet">
 <link href = "nav-style.css" type = "text/css" rel = "stylesheet">
-	
-<style>
-.card-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 20px;
-}
-
-.card {
-  background-color: #f1f1f1;
-  padding: 20px;
-  text-align: center;
-}
-
-.card img {
-  width: 50%;
-  border-radius: 50%;
-  margin-bottom: 20px;
-}
-
-.card .w3-large {
-  font-size: 1.2em;
-}
-
-@media screen and (max-width: 600px) {
-  .card-container {
-    grid-template-columns: 1fr;
-  }
-}
-</style>
 <title>Comrades</title>
-</head>
-<!-- ##################################### -->
+</head
 <body>
 	<h1>Comrades</h1>
 
@@ -58,35 +27,6 @@
     </nav>
 
     <!-- List of Friends -->
-	<div class="card-container">
-	    <div class="card">
-	      <img src="images/Ghosh.jpg" alt="Debashis Ghosh">
-	      <div class="w3-large"><a href="https://scholar.google.com/citations?user=L14IppEAAAAJ&hl=en" target="_blank">Debashis Ghosh</a></div>
-	      <!-- <div>Postdoc Mentor</div> -->
-	    </div>
-
-	    <div class="card">
-	      <img src="images/paty-2.jpg" alt="Paty Sol&oacute;rzano">
-	      <div class="w3-large"><a href="https://www.girasoladances.com/" target="_blank">Paty Sol&oacute;rzano</a></div>
-	      <!-- <div>Performance Artist, Comrade</div> -->
-	    </div>
-
-	    <div class="card">
-	      <img src="images/scott.jpg" alt="Clay Scott">
-	      <div class="w3-large"><a href="http://web.eecs.umich.edu/~cscott/" target="_blank">Clay Scott</a></div>
-	      <!-- <div>PhD Adviser</div> -->
-	    </div>
-
-	    <div class="card">
-	      <img src="images/brian.jpg" alt="Brian Segal">
-	      <div class="w3-large"><a href="https://bdsegal.github.io" target="_blank">Brian Segal</a></div>
-	      <!-- <div>Biostatistician, Comrade</div> -->
-	    </div>
-	</div>
-	
-	
-	
-<!--
     <ul class="w3-ul w3-card-4">
       <li>
         <div class = "w3-container w3-padding-small">
@@ -121,7 +61,6 @@
         </div>
       </li>
     </ul>
--->
 
 </div>
 </body>
