--- a/test_index.html
+++ b/test_index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="images/efren-jacaranda.jpeg">
   <title>Efr&#233;n Cruz Cort&#233;s</title>
 </head>
-  title>efr&#233;n cruz cort&#233;s</title>
+  <title>efr&#233;n cruz cort&#233;s</title>
 </head>
 
 <!-- [[ ** BODY ** ]] -->
@@ -25,7 +25,7 @@
 <!-- Main Content -->
 <div class="container">
   <div class="profile-image">
-    <img src="efren-jacaranda.jpeg" alt="efre&#233;n's picture">
+    <img src="images/efren-jacaranda.jpeg" alt="efre&#233;n's picture">
   </div>
   <div class="research-description">
     <h2>Research</h2>
