--- a/test_index.html
+++ b/test_index.html
@@ -6,20 +6,18 @@
   <link rel = "stylesheet" href = "style.css" type = "text/css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="icon" href="images/efren-jacaranda.jpeg">
-  <title>Efr&#233;n Cruz Cort&#233;s</title>
-</head>
   <title>efr&#233;n cruz cort&#233;s</title>
 </head>
 
 <!-- [[ ** BODY ** ]] -->
 <body>
-<h1>efr&#233;n cruz cort&#233;s</h1>
 
 <!-- Navigation Bar -->
 <div class="navbar">
+  <span class="navbar-name">efr&#233;n cruz cort&#233;s</span>
   <a href="#research">Research</a>
   <a href="#teaching">Teaching</a>
-  <a href="#art">Art</a>
+  <a class = "dynamic" href="#art">Art</a>
 </div>
 
 <!-- Main Content -->
