--- a/test_index.html
+++ b/test_index.html
@@ -28,7 +28,7 @@
       Michigan Institute for Data Science || Center for the Study of Complex Systems<br>
     </blockquote>
     <h3> University of Michigan</h3>
-    <p>I study the way algorithms reproduce bias and discrimination. Automated procedures are often designed to mimic the historical data humans have generated. Therefore, unintendedly, they have learned to discriminate based on class, race, gender, and other vulnerable groups. Such a phenomenon has serious consequences, as it may lead to furthering economic inequality, depriving the poor of resources, over-incarceration of people of color, etc. My goal is to understand the dynamics of the system the algorithm belongs to and assess which structural interventions are the best actions to both avoid discrimination and accomplish the desired goal for the population of interest.</p>
+    <p align = "justify">I study the way algorithms reproduce bias and discrimination. Automated procedures are often designed to mimic the historical data humans have generated. Therefore, unintendedly, they have learned to discriminate based on class, race, gender, and other vulnerable groups. Such a phenomenon has serious consequences, as it may lead to furthering economic inequality, depriving the poor of resources, over-incarceration of people of color, etc. My goal is to understand the dynamics of the system the algorithm belongs to and assess which structural interventions are the best actions to both avoid discrimination and accomplish the desired goal for the population of interest.</p>
   </div>
   <div class="profile-image">
     <img src="images/efren-jacaranda.jpeg" alt="efre&#233;n's picture">
