--- a/test_index.html
+++ b/test_index.html
@@ -42,8 +42,9 @@
   <a href="mailto:effy@example.com">effy@example.com</a>
   <a href="tel:+1234567890">(123) 456-7890</a>
 -->
-  <a href="https://www.twitter.com/effycruz" target="_blank">Twitter</a>
-  <a href="https://www.linkedin.com/in/effycruz" target="_blank">LinkedIn</a>
+  <a href="https://twitter.com/cafedemostenes" target="_blank">Twitter</a>
+  <a href="https://www.linkedin.com/in/efr%C3%A9n-cruz-cort%C3%A9s/" target="_blank">LinkedIn</a>
+  <a><b>email</b>: encc &lt;at&gt; umich &lt;dot&gt; edu</a>
 </div>
 
 </body>
