--- a/index.html
+++ b/index.html
@@ -15,15 +15,11 @@
 <!-- [[ ** BODY ** ]] -->
 <body>
 <!-- Heading -->
-
+<!--
 <div class="w3-container" style="font-family:Sans-serif;">
 	<p style="font-size:125%">Efr&#233;n Cruz Cort&#233;s.</p>
-    <!--
-	<div class="w3-panel w3-pink w3-round-xlarge">
-	<p class="w3-text-yellow" style="font-size:135%"><b>Under Construction.</b></p>
-	</div>
-    -->
 </div>
+-->
 
 <div class = "w3-container overdiv">
 
@@ -59,8 +55,10 @@
         <h3><b>Michigan Data Science Fellow</b></h3>
         <BLOCKQUOTE>
             Michigan Institute for Data Science || Center for the Study of Complex Systems<br>
-            University of Michigan
         </BLOCKQUOTE>
+	    <h4>University of Michigan</h4>
+	<br>
+    	<a><b>email</b>: encc &lt;at&gt; umich &lt;dot&gt; edu</a>
     </div>
     <div>
         <img src="images/efren-jacaranda.JPG" alt="Efrén's Picture" style="width:30%;height:30%;" 
