--- a/test_index.html
+++ b/test_index.html
@@ -13,13 +13,23 @@
 <body>
 
 <!-- Navigation Bar -->
+<nav class="w3-container" style="padding: 0; display: flex; justify-content: space-between; align-items: center;">
+  <span style="font-weight: bold; font-size: 20px;">Effy</span>
+  <ul class="mynavi" style="list-style-type: none; padding: 0; display: flex;">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="publications.html">Publications</a></li>
+    <li><a href="personal.html">Art</a></li>
+    <li><a href="comrades.html">Comrades</a></li>
+  </ul>
+</nav>
+<!--
 <div class="navbar">
   <a href="#research">Research</a>
   <a href="#teaching">Teaching</a>
   <a class = "dynamic" href="#art">Art</a>
   <span class="navbar-name">efr&#233;n cruz cort&#233;s</span>
 </div>
-
+-->
 <!-- Main Content -->
 <div class="container">
   <div class="research-description">
