--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href = "nav-style.css" type = "text/css" rel = "stylesheet">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="icon" href="images/efren-jacaranda.jpeg">
-<title>Efr&#233;n Cruz Cort&#233;s</title>
+<title>efr&#233;n cruz cort&#233;s</title>
 </head>
 
 <!-- [[ ** BODY ** ]] -->
@@ -26,7 +26,7 @@
 <!-- Navigation Bar -->
 <nav class="w3-container" style="padding:0"> <!-- you can either make it a container with 0 padding, or a w3-card (see other pages), the card adds shadows -->
 <ul class="mynavi">
-	<li><a href="index.html">Home</a></li>
+	<li><a href="index.html">efr&#233;n cruz cort&#233;s</a></li>
 	<li><a href="publications.html">Publications</a></li>
 	<!-- <li><a href="research.html">Research</a></li> -->
 	<!-- <li><a href="materials.html">Materials</a></li> -->
