--- a/test_index.html
+++ b/test_index.html
@@ -13,15 +13,15 @@
 <body>
 
 <!-- Navigation Bar -->
-<nav class="w3-container" style="padding: 0; display: flex; justify-content: space-between; align-items: center;">
-  <span style="font-weight: bold; font-size: 20px;">Effy</span>
-  <ul class="mynavi" style="list-style-type: none; padding: 0; display: flex;">
-    <li><a href="index.html">Home</a></li>
+<nav class="w3-container" style="padding: 0;">
+  <ul class="mynavi" style="list-style-type: none; padding: 0; display: flex; justify-content: flex-end;">
+    <li><a href="index.html" style="text-decoration: none;">Effy</a></li>
     <li><a href="publications.html">Publications</a></li>
     <li><a href="personal.html">Art</a></li>
     <li><a href="comrades.html">Comrades</a></li>
   </ul>
 </nav>
+
 <!--
 <div class="navbar">
   <a href="#research">Research</a>
