--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-
-<!-- #include virtual="/~umweb/example/index.html" -->
 <!DOCTYPE html>
 <html>
 <!-- [[ ** HEAD ** ]] -->
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href = "style.css" type = "text/css" rel = "stylesheet">
-<link href = "nav-style.css" type = "text/css" rel = "stylesheet">
+<link rel = "stylesheet" href = "style.css" type = "text/css">
+<link rel = "stylesheet" href = "nav-style.css" type = "text/css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="icon" href="images/efren-jacaranda.jpeg">
 <title>efr&#233;n cruz cort&#233;s</title>
@@ -16,15 +14,13 @@
 <body>
 <!-- Heading -->
 <!--
-<div class="w3-container" style="font-family:Sans-serif;">
-	<p style="font-size:125%">Efr&#233;n Cruz Cort&#233;s.</p>
-</div>
+something or other
 -->
 
 <div class = "w3-container overdiv">
 
 <!-- Navigation Bar -->
-<nav class="w3-container" style="padding:0"> <!-- you can either make it a container with 0 padding, or a w3-card (see other pages), the card adds shadows -->
+<nav class="w3-container" style="padding:0">
 <ul class="mynavi">
 	<li><a href="index.html">efr&#233;n cruz cort&#233;s</a></li>
 	<li><a href="publications.html">Publications</a></li>
@@ -32,60 +28,38 @@
 	<!-- <li><a href="materials.html">Materials</a></li> -->
 	<li><a href="personal.html">Art</a></li>
 	<li><a href="comrades.html">Comrades</a></li>
-	<!-- <li><a href="interest.html">Of Interest</a></li> -->
 </ul>
 </nav>
 
-<!--
-<div class="w3-bar">
-	<a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
-	<a href="research.html" class="w3-bar-item w3-button w3-mobile">Research</a>
-	<a href="publications.html" class="w3-bar-item w3-button w3-mobile">Publications</a>
-	<a href="materials.html" class="w3-bar-item w3-button w3-mobile">Materials</a>
-	<a href="personal.html" class="w3-bar-item w3-button w3-mobile">Personal</a>
-	<a href="friends.html" class="w3-bar-item w3-button w3-mobile">Friends</a>
-	<a href="interest.html" class="w3-bar-item w3-button w3-mobile">Of Interest</a>
-</div>
--->
-
 <!-- Personal Info -->
-<div class="w3-container w3-red">
-    <div class = "w3-container w3-twothird">
-        <h1><b>Efr&#233;n Cruz Cort&#233;s</b></h1>
-        <h3><b>Michigan Data Science Fellow</b></h3>
-        <BLOCKQUOTE>
-            Michigan Institute for Data Science || Center for the Study of Complex Systems<br>
-        </BLOCKQUOTE>
-	    <h4>University of Michigan</h4>
-	<br>
-    	<a><b>email</b>: encc &lt;at&gt; umich &lt;dot&gt; edu</a>
-    </div>
-    <div>
-        <img src="images/efren-jacaranda.JPG" alt="Efrén's Picture" style="width:30%;height:30%;" 
-	class="w3-right">
-    </div>
-    <!--
-	<img src="images/greenings-redux.jpg" alt="Efrén's Picture" style="width:30%;height:30%;" 
-	class="w3-right">
-    -->
-</div>
-    
-<!-- Quick Description -->
-    <div class="w3-container">
-        <h2 class="w3-center"> In a nutshell</h2>
-        <div>
-            <!-- <h4>For the casual visitor:</h4> -->
-            <p>I study the way algorithms reproduce bias and discrimination. Automated procedures are often designed to mimic the historical data humans have generated. Therefore, unintendedly, they have learned to discriminate based on class, race, gender, and other vulnerable groups. Such a phenomenon has serious consequences, as it may lead to furthering economic inequality, depriving the poor of resources, over-incarceration of people of color, etc. My goal is to understand the dynamics of the system the algorithm belongs to and assess which structural interventions are the best actions to both avoid discrimination and accomplish the desired goal for the population of interest.
-            </p>
-        </div>
+<div class="w3-container">
+    <div class = "w3-container w3-twothird" style="text-align: justify;">
+        <p style="font-size: 14px;">
+	    I am a <a href="https://midas.umich.edu/fellows/">Data Science Fellow</a> at the
+            <a href="https://midas.umich.edu/">Michigan Institute for Data Science</a> and the 
+            <a href = "https://lsa.umich.edu/cscs">Center for the Study of Complex Systems</a> at the
+            <strong>University of Michigan</strong> 
+        </p>
+	<div>
+	<p style="font-size: 14px">
+I study the way algorithms reproduce bias and discrimination. Automated procedures are often designed to mimic the historical data humans have generated. Therefore, unintendedly, they have learned to discriminate based on class, race, gender, and other vulnerable groups. Such a phenomenon has serious consequences, as it may lead to furthering economic inequality, depriving the poor of resources, over-incarceration of people of color, etc. My goal is to understand the dynamics of the system the algorithm belongs to and assess which structural interventions are the best actions to both avoid discrimination and accomplish the desired goal for the population of interest.
+         </p>
+	<p>
+	<a><b>email</b>: encc &lt;at&gt; umich &lt;dot&gt; edu</a>
+	</p>
+	</div>
     </div>
 
-<!-- Research Statement -->
+    <div style="display: flex; align-items: center; flex-direction:column; justify-content: center;" class="flex-container">
+        <img src="images/efren-jacaranda.jpeg" alt="efrén's Picture" style="width:100%; max-width: 300px; height: auto; margin: auto;" class="w3-right">
+    </div>
+
+</div>
+
+
 
 <!-- Other Efrenes -->
-<div class="w3-container w3-pale-red">
-<p >
-AKA: Efren Cruz Cortes.
+<div class="contact-info">
 	<a href = "https://twitter.com/cafedemostenes" target="_blank">
 		<img src = "images/twitter-icon.png" alt="Twitter Profile" style="width:32px;height:32px;border:0;">
 	</a>
@@ -95,11 +69,15 @@ AKA: Efren Cruz Cortes.
 	<a href = "https://cafedemostenes.wordpress.com/" target="_blank">
 		<img src="images/wordpress-logo-32-blue.png" alt="Efrén's Blog" style="width:32px;height:32px;border:0;">
 	</a>
-	<a>
-		<b>email</b>: encc (at) umich (dot) edu
-	</a>
-</p>
 </div>
+
+<!--
+<div class="contact-info">
+  <a href="https://twitter.com/cafedemostenes" target="_blank">Twitter</a>
+  <a href="https://www.linkedin.com/in/efr%C3%A9n-cruz-cort%C3%A9s/" target="_blank">LinkedIn</a>
+  <a><b>email</b>: encc &lt;at&gt; umich &lt;dot&gt; edu</a>
+</div>
+-->
 
 </div>
 </body>
