--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 <!-- [[ ** BODY ** ]] -->
 <body>
 <!-- Heading -->
-<!--
-something or other
--->
 
 <div class = "w3-container overdiv">
 
@@ -63,6 +60,9 @@ I study the way algorithms reproduce bias and discrimination. Automated procedur
 	<a href = "https://twitter.com/cafedemostenes" target="_blank">
 		<img src = "images/twitter-icon.png" alt="Twitter Profile" style="width:32px;height:32px;border:0;">
 	</a>
+	<a href="https://www.linkedin.com/in/efr%C3%A9n-cruz-cort%C3%A9s/" target="_blank">
+		<img src = "images/LI-in-BUG.png" alt="LinkedIn Profile" style="width:32px;height:32px;border:0;">
+	</a>
 	<a href = "https://github.com/efrencc" target="_blank">
 		<img src="images/GitHub-Mark-32px.png" alt="Github Profile" style="width:32px;height:32px;border:0;">
 	</a>
@@ -70,14 +70,6 @@ I study the way algorithms reproduce bias and discrimination. Automated procedur
 		<img src="images/wordpress-logo-32-blue.png" alt="Efrén's Blog" style="width:32px;height:32px;border:0;">
 	</a>
 </div>
-
-<!--
-<div class="contact-info">
-  <a href="https://twitter.com/cafedemostenes" target="_blank">Twitter</a>
-  <a href="https://www.linkedin.com/in/efr%C3%A9n-cruz-cort%C3%A9s/" target="_blank">LinkedIn</a>
-  <a><b>email</b>: encc &lt;at&gt; umich &lt;dot&gt; edu</a>
-</div>
--->
 
 </div>
 </body>
