--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ I study the way algorithms reproduce bias and discrimination. Automated procedur
 		<img src = "images/twitter-icon.png" alt="Twitter Profile" style="width:32px;height:32px;border:0;">
 	</a>
 	<a href="https://www.linkedin.com/in/efr%C3%A9n-cruz-cort%C3%A9s/" target="_blank">
-		<img src = "images/LI-in-BUG.png" alt="LinkedIn Profile" style="width:32px;height:32px;border:0;">
+		<img src = "images/LI-In-Bug.png" alt="LinkedIn Profile" style="width:32px;height:32px;border:0;">
 	</a>
 	<a href = "https://github.com/efrencc" target="_blank">
 		<img src="images/GitHub-Mark-32px.png" alt="Github Profile" style="width:32px;height:32px;border:0;">
