--- a/personal.html
+++ b/personal.html
@@ -5,10 +5,9 @@
 <link href = "style.css" type = "text/css" rel = "stylesheet">
 <link href = "nav-style.css" type = "text/css" rel = "stylesheet">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<title>Personal</title>
+	<title>Art</title>
 </head>
 <body>
-	<h1>Personal</h1>
 <div class = "w3-container overdiv"> <!-- stays this class until the end -->
 
     <!-- Navigation Bar -->
@@ -23,10 +22,18 @@
         <!-- <li><a href="interest.html">Of Interest</a></li> -->
     </ul>
     </nav>
-
+	
+<h1>Personal</h1>
     <!-- Info -->
     <p>I often collaborate with artists and dancers. Currently I'm a member of the <b>Coven Intelligecen Program</b>  and am working on the <b>I.C.T.</b> project. Here are some exhibitions, workshops, and performances:</p>
     <ul class = "w3-ul w3-card">
+	    <li>
+		    <div class = "w3-container">
+			    <span><b>Prologues and Protocols</b></span><br>
+			    Coven Intelligence Program<br>
+			    International Symposium of Electronic Arts (ISEA)<br>
+			    Paris, France, 2023
+	    </li>
 	<li>
 		<div class = "w3-container">
 			<span><b>STAKES Chronicles I-III (Insurgent Ecologies Archive, SpellWeaver, Plants teach ethics to AI)</b></span>
