--- a/comrades.html
+++ b/comrades.html
@@ -9,14 +9,13 @@
 <title>Comrades</title>
 </head
 <body>
-	<h1>Comrades</h1>
 
 <div class="w3-container overdiv">
 
     <!-- Navigation Bar -->
     <nav class="w3-card">
     <ul class="mynavi">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">efr&#233;n cruz cort&#233;s</a></li>
         <li><a href="publications.html">Publications</a></li>
         <!-- <li><a href="research.html">Research</a></li> -->
         <!-- <li><a href="materials.html">Materials</a></li> -->
@@ -25,6 +24,8 @@
         <!-- <li><a href="interest.html">Of Interest</a></li> -->
     </ul>
     </nav>
+	
+	<h1>Comrades</h1>
 
     <!-- List of Friends -->
     <ul class="w3-ul w3-card-4">
