--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <nav class="w3-card">
     <ul class="mynavi">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">efr&#233;n cruz cort&#233;s</a></li>
         <li><a href="publications.html">Publications</a></li>
         <!-- <li><a href="research.html">Research</a></li> -->
         <!-- <li><a href="materials.html">Materials</a></li> -->
