--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
 	    I am a <a href="https://midas.umich.edu/fellows/">Data Science Fellow</a> at the
             <a href="https://midas.umich.edu/">Michigan Institute for Data Science</a> and the 
             <a href = "https://lsa.umich.edu/cscs">Center for the Study of Complex Systems</a> at the
-            <strong>University of Michigan</strong> 
+            <strong>University of Michigan</strong>. I got my PhD from the University of Michigan majoring in Electrical Engineering and focusing on theoretical and applied Machine Learning.
         </p>
 	<div>
 	<p style="font-size: 14px">
 I study the way algorithms reproduce bias and discrimination. Automated procedures are often designed to mimic the historical data humans have generated. Therefore, unintendedly, they have learned to discriminate based on class, race, gender, and other vulnerable groups. Such a phenomenon has serious consequences, as it may lead to furthering economic inequality, depriving the poor of resources, over-incarceration of people of color, etc. My goal is to understand the dynamics of the system the algorithm belongs to and assess which structural interventions are the best actions to both avoid discrimination and accomplish the desired goal for the population of interest.
          </p>
+	<p>
+	<i>Interests: fair machine learning, causal inference, agent based modeling, dynamical systems, public policy.</i>
+	</p>
 	<p>
 	<a><b>email</b>: encc &lt;at&gt; umich &lt;dot&gt; edu</a>
 	</p>
