--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<!-- <li><a href="materials.html">Materials</a></li> -->
 	<li><a href="personal.html">Art</a></li>
 	<li><a href="comrades.html">Comrades</a></li>
+	<li><a href="ecc - CV - web.pdf">CV</a></li>
 </ul>
 </nav>
 
