--- a/comrades.html
+++ b/comrades.html
@@ -21,6 +21,7 @@
         <!-- <li><a href="materials.html">Materials</a></li> -->
         <li><a href="personal.html">Art</a></li>
         <li><a href="comrades.html">Comrades</a></li>
+	<li><a href="ecc - CV - web.pdf">CV</a></li>
         <!-- <li><a href="interest.html">Of Interest</a></li> -->
     </ul>
     </nav>
